<resources>
    <string name="app_name">Assignment 3</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <plurals name="title_count">
        <item quantity="one">Donut Count: %1$d donut</item>
        <item quantity="other">Donut Count: %1$d donuts</item>
    </plurals>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about">About</string>
    <string name="my_name">Shehnazdeep</string>
    <string name="year">2022</string>
    <string name="to_do">To Do</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="due_date">Due Date</string>
    <string name="done_flag">Done Flag</string>
    <string name="add">Add</string>
    <string name="delete_to_do">Delete To Do</string>
    <string name="add_more_title_info">Add more title info!</string>
    <string name="clear">Clear</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>
</resources>